reportbug (4.7) UNRELEASED; urgency=low

  * reportbug/__init__.py
    - bump reportbug version
  * debian/control
    - replace python-gnome2-extras with python-gtkspell in Suggests; thanks to
      Josselin Mouette for the report; Closes: #541598
  * reportbug/ui/text_ui.py
    - nomore use writelines() when filtering, but loop over lines then decode an
      print one by one; thanks to Jakub Wilk for the report and Carl Chenet for
      the patch: Closes: #541791
    - correctly call search_bugs() when filtering bugs (now passing package
      too); thanks to Vincent Lefevre for the report and Carl Chenet for the
      patch: Closes: #541408, #542119
  * reportbug/utils.py
    - 'ldap' and 'no-ldap' options now issue a "Unrecognized token" warning:
       LDAP support is gone since years; thanks to martin f krafft for the
       report; Closes: #271057

 -- Sandro Tosi <morph@debian.org>  Tue, 18 Aug 2009 09:39:44 +0200

reportbug (4.6) unstable; urgency=low

  * reportbug/__init__.py
    - bump reportbug version
  * bin/querybts
    - allows to specify multiple bugs number with --mbox; thanks to Trent Buck
      for the report and Carl Chenet for the patch: Closes: #427560
  * reportbug/submit.py
    - added support for gnupg-agent with signing emails; thanks to Mathias
      Brodala or the report and Carl Chenet for the patch: Closes: #435818
  * bin/reportbug
    - allow ENTER to exit from file detaching menu (and enforced file checking);
      thanks to Rodrigo Campos for report and (partial) patch; Closes: 535789
    - do not exit if no subject is entered for new bugs, but keep asking it;
      thanks to Olaf van der Spek for the report and Carl Chenet for the patch;
      Closes: #537449
    - do not exit if no subject is entered for additional information, but keep
      asking it; thanks to Carl Chenet for the report and patch: Closes: #537624
    - configuration asks also if 'smtptls' is needed or not; thanks to Jerome