@@ -448,11 +448,11 @@ def get_package_name(bts='debian', mode=MODE_EXPERT):
                 False):
                 return get_package_name(bts, mode)
 
-        if package == 'ftp.debian.org':
+        if package == 'ftp.debian.org' or package == 'release.debian.org':
             if not ui.yes_no(
-                'Are you sure you want to file a bug on ftp.debian.org?',
+                'Are you sure you want to file a bug on %s?' % (package),
                 'Yes, I am a developer or know what I\'m doing.',
-                'No, I am not a developer and I don\'t know what ftp.debian.org is.',
+                'No, I am not a developer and I don\'t know what %s is.' % (package),
                 False):
                 return get_package_name(bts, mode)
 
@@ -1766,7 +1766,8 @@ For more details, please see: http://www.debian.org/devel/wnpp/''')
         HOMEDIR = os.environ.get('HOME', '/')
 
         if (rtype == 'debbugs' and not self.options.tags and
-            not (notatty or self.options.kudos or exinfo) and package not in ('wnpp','ftp.debian.org') and
+            not (notatty or self.options.kudos or exinfo) and
+            package not in ('wnpp','ftp.debian.org','release.debian.org') and
             mode > MODE_NOVICE):
             # Multiple-choice checkbox
             if severity in ('grave', 'critical', 'serious'):
